# music_agent

./: .gitignore  LICENSE  pyproject.toml  utils.py
models/: users.py
src/: auth.py  main.py  system_development.md  utils.py
src/account_creation/: sample_output.json  schemas.py  service.py  tests.py  utils.py
src/models/: tests.py  users.py
src/services/: create_account.py
